// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/Skills/SidebarSkillsCard should render an error from the error code 1`] = `
<Status
  card={
    Object {
      "skill_card_type": "status",
    }
  }
/>
`;

exports[`elements/content-sidebar/Skills/SidebarSkillsCard should render face component 1`] = `
<Faces
  card={
    Object {
      "skill_card_type": "face",
    }
  }
  getViewer={[MockFunction]}
/>
`;

exports[`elements/content-sidebar/Skills/SidebarSkillsCard should render keywords component 1`] = `
<Keywords
  card={
    Object {
      "skill_card_type": "keyword",
    }
  }
  getViewer={[MockFunction]}
/>
`;

exports[`elements/content-sidebar/Skills/SidebarSkillsCard should render nothing if invalid type 1`] = `""`;

exports[`elements/content-sidebar/Skills/SidebarSkillsCard should render timelines component 1`] = `
<Faces
  card={
    Object {
      "skill_card_type": "timeline",
    }
  }
  getViewer={[MockFunction]}
/>
`;

exports[`elements/content-sidebar/Skills/SidebarSkillsCard should render transcript component 1`] = `
<Transcript
  card={
    Object {
      "skill_card_type": "transcript",
    }
  }
  getViewer={[MockFunction]}
/>
`;
